# lamb-ddd-clean-arch-solid

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.local  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  todo.md
.docker/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh
.github/: pull_request_template.md
.github/workflows/: ci.yaml
reports/coverage/: .gitignore  status.json
reports/logs/: api_2023-01-28_12-54-03_787734  api_2023-01-28_12-54-16_384763  api_2023-01-28_12-55-00_802833  api_customers_2023-01-28_15-11-08_022113  api_extract_2023-01-28_15-27-07_267314  api_extract_2023-01-28_15-50-18_296978  api_users_2023-01-28_15-50-11_134034
src/application/interface/: db_connection_handler_interface.py
src/application/use_case/commentary/: add_commentary.py  delete_commentary.py  find_all_commentaries.py  find_commentaries_by_instance_slug.py  find_commentary_by_id.py  find_commentary_by_instance_slug.py
src/application/use_case/get_user/: get_user.py  user_output_dto.py  user_update_dto.py
src/application/use_case/user/: add_user.py  delete_user.py  find_all_users.py  find_user_by_email.py  find_user_by_id.py  update_user.py
src/domain/entity/: commentary.py  customer.py  user.py
src/domain/error/: commentary_exception.py  customer_exception.py  user_exception.py
src/domain/event/: event_dispatcher.py
src/domain/event/commentary/: commentary_made_event.py
src/domain/event/interface/: event_dispatcher_interface.py  event_handler_interface.py  event_interface.py
src/domain/repository/: commentary_repository_interface.py  customer_repository_interface.py  repository_interface.py  user_repository_interface.py
src/domain/service/: commentary_tag_service.py
src/domain/value/: cpf.py  rating.py  slug.py  tag.py
src/domain/value_object/: rating.py  slug.py  tag.py
src/infrastructure/: settings.py
src/infrastructure/database/sqlalchemy/: db_connection_handler.py
src/infrastructure/http/: main.py  server.py
src/infrastructure/http/routes/: customer_route.py  extract_route.py  root_route.py  server.py  user_route.py
src/infrastructure/presentation/: customer_presenter.py
src/infrastructure/presentation/data/: commentary_presenter.py  customer_presenter.py  user_presenter.py
src/infrastructure/presentation/error/: commentary_exception_presentation.py  customer_exception_presentation.py  user_exception_presentation.py
src/infrastructure/repository/memory/: commentary_memory_repository.py  customer_memory_repository.py  user_memory_repository.py
src/infrastructure/repository/postgresql/: user_postgresql_repository.py
tests/: conftest.py
tests/e2e/: test_customer_route.py  test_root_route.py
tests/integration/: test_db_connection_handler.py
tests/integration/infrastructure/: test_db_connection_handler.py
tests/integration/infrastructure/repository/: test_user_postgresql_repository.py
tests/integration/use_case/commentary/: test_add_commentary.py  test_delete_commentary.py  (+3 more)
tests/unit/: test_commentary.py  test_cpf.py  test_find_user_by_id.py  test_get_user.py  test_in_memory_user_repository.py  test_rating.py  test_slug.py  test_tag.py  test_tag_service.py  test_user.py
tests/unit/domain/: test_commentary.py  test_cpf.py  test_customer.py  test_event_dispatcher.py
tests/unit/infrastructure/: test_in_memory_commentary_repository.py  test_in_memory_customer_repository.py  test_in_memory_user_repository.py
tests/unit/use_case/: test_delete_user.py  test_find_all_users.py  test_find_user_by_id.py  test_update_user.py
(+60 files in other folders)
