[tool.poetry]
name = "lamb-extract"
version = "0.1.0-alpha"
description = ""
authors = ["Gabriel <gbrcenciati@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
fastapi = "^0.88.0"
sqlalchemy = "^1.4.44"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^2.0.0"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"
pylint = "^2.15.7"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["C0114", "C0116", "R0903"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["W503"]
exclude = [".venv/"]
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
addopts = [
    "-v", "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=80",
]
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source = ["tests"]